Revamp Courses and Eligibility Sections in index.html and style.css. Replace the old courses section with a new eligibility and courses layout, enhancing visual appeal and responsiveness. Update styles for better alignment, spacing, and hover effects on course cards.

--- a/index.html
+++ b/index.html
@@ -219,64 +219,54 @@
       </picture>
     </section>
 
-    <!-- Courses Section -->
-    <section class="courses-section">
-      <div class="courses-container container">
-        <h2 style="color: #000">Two Year PGDM Programmes at LBSIM</h2>
-        <div class="courses-grid">
-          <!-- Course 1: PGDM General -->
-          <div class="course-card">
-            <!-- <div class="course-image">
-              <img
-                src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80"
-                alt="PGDM General Management"
-              />
-            </div> -->
-            <div class="course-label">PGDM General</div>
-          </div>
+    <!-- Eligibility & Courses Section -->
+    <section class="eligibility-courses-section">
+      <div class="container" style="background-color: transparent">
+        <!-- Eligibility Section (Left) -->
+        <div class="eligibility-card">
+          <h2 class="card-title" style="text-align: left">
+            Eligibility Requirements
+          </h2>
+          <ul class="eligibility-list">
+            <li>
+              <span class="icon">&#10140;</span>
+              <div>Bachelor’s Degree (3 Year) with min. 50% marks</div>
+            </li>
+            <li>
+              <span class="icon">&#10140;</span>
+              <div>CAT 2025 / XAT 2026 / GMAT (01 Jan 2022 to 31 Jan 2026)</div>
+            </li>
+            <li>
+              <span class="icon">&#10140;</span>
+              <div>
+                Group Discussion, Extempore & Personal Interview (Online and
+                Offline)
+              </div>
+            </li>
+          </ul>
+        </div>
 
-          <!-- Course 2: PGDM Financial Management -->
-          <div class="course-card">
-            <!-- <div class="course-image">
-              <img
-                src="/images/programs/finance.jpg"
-                alt="PGDM Financial Management"
-              />
-            </div> -->
-            <div class="course-label">PGDM Financial Management</div>
-          </div>
-
-          <!-- Course 3: PGDM Research & Business Analytics -->
-          <div class="course-card">
-            <!-- <div class="course-image">
-              <img
-                src="/images/programs/business-analytics.jpg"
-                alt="PGDM Research & Business Analytics"
-              />
-            </div> -->
-            <div class="course-label">PGDM Research & Business Analytics</div>
-          </div>
-
-          <!-- Course 4: PGDM Artificial Intelligence & Data Science -->
-          <div class="course-card">
-            <!-- <div class="course-image">
-              <img
-                src="/images/programs/AI.jpg"
-                alt="PGDM Artificial Intelligence & Data Science"
-              />
-            </div> -->
-            <div class="course-label">
-              PGDM Artificial Intelligence & Data Science
+        <!-- Courses Section (Right) -->
+        <div class="courses-card-section">
+          <h2 class="card-title" style="font-size: 32px">
+            Two Year Full Time PGDM Programmes
+          </h2>
+          <div class="courses-grid-new">
+            <div class="course-card-new">
+              <h3>PGDM General</h3>
+            </div>
+            <div class="course-card-new">
+              <h3>PGDM Financial Management</h3>
+            </div>
+            <div class="course-card-new">
+              <h3>PGDM Research & Business Analytics</h3>
+            </div>
+            <div class="course-card-new">
+              <h3>PGDM Artificial Intelligence & Data Science</h3>
             </div>
           </div>
         </div>
       </div>
-      <!-- <button
-        class="cta-button"
-        style="margin: 0 auto; display: block; margin-top: 40px"
-      >
-        Apply Now
-      </button> -->
     </section>
 
     <!-- University Partners Section -->
@@ -428,51 +418,81 @@
           <!-- Step 6 -->
           <div class="step-card">
             <div class="step-icon">
-              <img src="/images/international-relations/6.jpg" alt="Get Admission Offer Icon" />
+              <img
+                src="/images/international-relations/6.jpg"
+                alt="Get Admission Offer Icon"
+              />
             </div>
             <h3 class="step-title">Pathumthani University (PTU), Thailand</h3>
           </div>
           <!-- Step 7 -->
           <div class="step-card">
             <div class="step-icon">
-              <img src="/images/international-relations/7.png" alt="Check Final Results Icon" />
+              <img
+                src="/images/international-relations/7.png"
+                alt="Check Final Results Icon"
+              />
             </div>
-            <h3 class="step-title">Universiti Kebangaan Malaysia, National Univesity of Malaysia
-
+            <h3 class="step-title">
+              Universiti Kebangaan Malaysia, National Univesity of Malaysia
             </h3>
           </div>
           <!-- Step 8 -->
           <div class="step-card">
             <div class="step-icon">
-              <img src="/images/international-relations/8.jpg" alt="Start Your Journey Icon" />
+              <img
+                src="/images/international-relations/8.jpg"
+                alt="Start Your Journey Icon"
+              />
             </div>
-            <h3 class="step-title">College of Business, Northern Illinois University (NIU), Dekalb, Illinois, USA</h3>
+            <h3 class="step-title">
+              College of Business, Northern Illinois University (NIU), Dekalb,
+              Illinois, USA
+            </h3>
           </div>
           <!-- Step 9 -->
           <div class="step-card">
             <div class="step-icon">
-              <img src="/images/international-relations/9.jpg" alt="Start Your Journey Icon" />
+              <img
+                src="/images/international-relations/9.jpg"
+                alt="Start Your Journey Icon"
+              />
             </div>
-            <h3 class="step-title">Nanyang Business School, Nanyang Technological University, Singapore</h3>
+            <h3 class="step-title">
+              Nanyang Business School, Nanyang Technological University,
+              Singapore
+            </h3>
           </div>
           <!-- Step 10 -->
           <div class="step-card">
             <div class="step-icon">
-              <img src="/images/international-relations/10.jpg" alt="Start Your Journey Icon" />
+              <img
+                src="/images/international-relations/10.jpg"
+                alt="Start Your Journey Icon"
+              />
             </div>
             <h3 class="step-title">Nipissing University, Ontario, Canada</h3>
           </div>
           <!-- Step 11 -->
           <div class="step-card">
             <div class="step-icon">
-              <img src="/images/international-relations/11.jpg" alt="Start Your Journey Icon" />
+              <img
+                src="/images/international-relations/11.jpg"
+                alt="Start Your Journey Icon"
+              />
             </div>
-            <h3 class="step-title">European Higher School for Economics & Management (EHSEM), Bulgaria</h3>
+            <h3 class="step-title">
+              European Higher School for Economics & Management (EHSEM),
+              Bulgaria
+            </h3>
           </div>
           <!-- Step 12 -->
           <div class="step-card">
             <div class="step-icon">
-              <img src="/images/international-relations/12.jpg" alt="Start Your Journey Icon" />
+              <img
+                src="/images/international-relations/12.jpg"
+                alt="Start Your Journey Icon"
+              />
             </div>
             <h3 class="step-title">Development Strategy Center, Ujbekistan</h3>
           </div>
