Add Alumni Speak Section with Video Slider in index.html and enhance slider functionality in script.js. Implement responsive design for video cards and controls, ensuring improved user interaction and visual appeal. Include modal functionality for video playback.

--- a/index.html
+++ b/index.html
@@ -654,6 +654,46 @@
       </div>
     </section>
 
+    <!-- Alumni Speak Section -->
+    <section class="student-speak-section alumni-speak-section">
+      <div class="student-speak-container">
+        <h2 class="section-title">Alumni Speak</h2>
+        <div class="student-slider-wrapper">
+          <div class="student-slider">
+            <div class="student-video-card" data-video-id="Gz5Vpjt96ZY">
+              <div class="video-thumbnail-wrapper">
+                <img src="https://img.youtube.com/vi/Gz5Vpjt96ZY/hqdefault.jpg" alt="Video Thumbnail">
+                <div class="play-button"></div>
+              </div>
+            </div>
+            <div class="student-video-card" data-video-id="bB6iVfoEBMw">
+              <div class="video-thumbnail-wrapper">
+                <img src="https://img.youtube.com/vi/bB6iVfoEBMw/hqdefault.jpg" alt="Video Thumbnail">
+                <div class="play-button"></div>
+              </div>
+            </div>
+            <div class="student-video-card" data-video-id="qcAkqzskWzI">
+              <div class="video-thumbnail-wrapper">
+                <img src="https://img.youtube.com/vi/qcAkqzskWzI/hqdefault.jpg" alt="Video Thumbnail">
+                <div class="play-button"></div>
+              </div>
+            </div>
+            <div class="student-video-card" data-video-id="xJoXchFct80">
+              <div class="video-thumbnail-wrapper">
+                <img src="https://img.youtube.com/vi/xJoXchFct80/hqdefault.jpg" alt="Video Thumbnail">
+                <div class="play-button"></div>
+              </div>
+            </div>
+          </div>
+          <button class="slider-btn prev-btn">&lt;</button>
+          <button class="slider-btn next-btn">&gt;</button>
+        </div>
+        <div class="slider-indicators">
+          <!-- Indicators will be injected here by JavaScript -->
+        </div>
+      </div>
+    </section>
+
     <!-- Video Modal -->
     <div id="video-modal" class="video-modal">
       <div class="video-modal-content">
