--- a/index.html
+++ b/index.html
@@ -500,6 +500,144 @@
       </div>
     </section>
 
+    <!-- Student Speak Section -->
+    <section class="student-speak-section">
+      <div class="student-speak-container">
+        <h2 class="section-title">Student Speak</h2>
+        <div class="student-slider-wrapper">
+          <div class="student-slider">
+            <div class="student-video-card" data-video-id="gZBuHb0YAec">
+              <div class="video-thumbnail-wrapper">
+                <img
+                  src="https://img.youtube.com/vi/gZBuHb0YAec/hqdefault.jpg"
+                  alt="Video Thumbnail"
+                />
+                <div class="play-button"></div>
+              </div>
+            </div>
+            <div class="student-video-card" data-video-id="yLUOx4EItzM">
+              <div class="video-thumbnail-wrapper">
+                <img
+                  src="https://img.youtube.com/vi/yLUOx4EItzM/hqdefault.jpg"
+                  alt="Video Thumbnail"
+                />
+                <div class="play-button"></div>
+              </div>
+            </div>
+            <div class="student-video-card" data-video-id="jBkX4sKgChc">
+              <div class="video-thumbnail-wrapper">
+                <img
+                  src="https://img.youtube.com/vi/jBkX4sKgChc/hqdefault.jpg"
+                  alt="Video Thumbnail"
+                />
+                <div class="play-button"></div>
+              </div>
+            </div>
+            <div class="student-video-card" data-video-id="ZdRFzKNqOp8">
+              <div class="video-thumbnail-wrapper">
+                <img
+                  src="https://img.youtube.com/vi/ZdRFzKNqOp8/hqdefault.jpg"
+                  alt="Video Thumbnail"
+                />
+                <div class="play-button"></div>
+              </div>
+            </div>
+            <div class="student-video-card" data-video-id="1C7qb5uLxe4">
+              <div class="video-thumbnail-wrapper">
+                <img
+                  src="https://img.youtube.com/vi/1C7qb5uLxe4/hqdefault.jpg"
+                  alt="Video Thumbnail"
+                />
+                <div class="play-button"></div>
+              </div>
+            </div>
+            <div class="student-video-card" data-video-id="XPXqt8iZgYo">
+              <div class="video-thumbnail-wrapper">
+                <img
+                  src="https://img.youtube.com/vi/XPXqt8iZgYo/hqdefault.jpg"
+                  alt="Video Thumbnail"
+                />
+                <div class="play-button"></div>
+              </div>
+            </div>
+          </div>
+          <button class="slider-btn prev-btn">&lt;</button>
+          <button class="slider-btn next-btn">&gt;</button>
+        </div>
+        <div class="slider-indicators">
+          <!-- Indicators will be injected here by JavaScript -->
+        </div>
+      </div>
+    </section>
+
+    <!-- Alumni Speak Section -->
+    <section class="student-speak-section alumni-speak-section">
+      <div class="student-speak-container">
+        <h2 class="section-title">Alumni Speak</h2>
+        <div class="student-slider-wrapper">
+          <div class="student-slider">
+            <div class="student-video-card" data-video-id="Gz5Vpjt96ZY">
+              <div class="video-thumbnail-wrapper">
+                <img
+                  src="https://img.youtube.com/vi/Gz5Vpjt96ZY/hqdefault.jpg"
+                  alt="Video Thumbnail"
+                />
+                <div class="play-button"></div>
+              </div>
+            </div>
+            <div class="student-video-card" data-video-id="bB6iVfoEBMw">
+              <div class="video-thumbnail-wrapper">
+                <img
+                  src="https://img.youtube.com/vi/bB6iVfoEBMw/hqdefault.jpg"
+                  alt="Video Thumbnail"
+                />
+                <div class="play-button"></div>
+              </div>
+            </div>
+            <div class="student-video-card" data-video-id="qcAkqzskWzI">
+              <div class="video-thumbnail-wrapper">
+                <img
+                  src="https://img.youtube.com/vi/qcAkqzskWzI/hqdefault.jpg"
+                  alt="Video Thumbnail"
+                />
+                <div class="play-button"></div>
+              </div>
+            </div>
+            <div class="student-video-card" data-video-id="xJoXchFct80">
+              <div class="video-thumbnail-wrapper">
+                <img
+                  src="https://img.youtube.com/vi/xJoXchFct80/hqdefault.jpg"
+                  alt="Video Thumbnail"
+                />
+                <div class="play-button"></div>
+              </div>
+            </div>
+          </div>
+          <button class="slider-btn prev-btn">&lt;</button>
+          <button class="slider-btn next-btn">&gt;</button>
+        </div>
+        <div class="slider-indicators">
+          <!-- Indicators will be injected here by JavaScript -->
+        </div>
+      </div>
+    </section>
+
+    <!-- Video Modal -->
+    <div id="video-modal" class="video-modal">
+      <div class="video-modal-content">
+        <span class="close-modal-btn">&times;</span>
+        <iframe
+          id="youtube-video-iframe"
+          width="560"
+          height="315"
+          src=""
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+
     <!-- Admission Process Section -->
     <section class="admission-process-section">
       <div class="container">
@@ -601,106 +739,6 @@
         </div>
       </div>
     </section>
-
-    <!-- Student Speak Section -->
-    <section class="student-speak-section">
-      <div class="student-speak-container">
-        <h2 class="section-title">Student Speak</h2>
-        <div class="student-slider-wrapper">
-          <div class="student-slider">
-            <div class="student-video-card" data-video-id="gZBuHb0YAec">
-              <div class="video-thumbnail-wrapper">
-                <img src="https://img.youtube.com/vi/gZBuHb0YAec/hqdefault.jpg" alt="Video Thumbnail">
-                <div class="play-button"></div>
-              </div>
-            </div>
-            <div class="student-video-card" data-video-id="yLUOx4EItzM">
-              <div class="video-thumbnail-wrapper">
-                <img src="https://img.youtube.com/vi/yLUOx4EItzM/hqdefault.jpg" alt="Video Thumbnail">
-                <div class="play-button"></div>
-              </div>
-            </div>
-            <div class="student-video-card" data-video-id="jBkX4sKgChc">
-              <div class="video-thumbnail-wrapper">
-                <img src="https://img.youtube.com/vi/jBkX4sKgChc/hqdefault.jpg" alt="Video Thumbnail">
-                <div class="play-button"></div>
-              </div>
-            </div>
-            <div class="student-video-card" data-video-id="ZdRFzKNqOp8">
-              <div class="video-thumbnail-wrapper">
-                <img src="https://img.youtube.com/vi/ZdRFzKNqOp8/hqdefault.jpg" alt="Video Thumbnail">
-                <div class="play-button"></div>
-              </div>
-            </div>
-            <div class="student-video-card" data-video-id="1C7qb5uLxe4">
-              <div class="video-thumbnail-wrapper">
-                <img src="https://img.youtube.com/vi/1C7qb5uLxe4/hqdefault.jpg" alt="Video Thumbnail">
-                <div class="play-button"></div>
-              </div>
-            </div>
-            <div class="student-video-card" data-video-id="XPXqt8iZgYo">
-              <div class="video-thumbnail-wrapper">
-                <img src="https://img.youtube.com/vi/XPXqt8iZgYo/hqdefault.jpg" alt="Video Thumbnail">
-                <div class="play-button"></div>
-              </div>
-            </div>
-          </div>
-          <button class="slider-btn prev-btn">&lt;</button>
-          <button class="slider-btn next-btn">&gt;</button>
-        </div>
-        <div class="slider-indicators">
-          <!-- Indicators will be injected here by JavaScript -->
-        </div>
-      </div>
-    </section>
-
-    <!-- Alumni Speak Section -->
-    <section class="student-speak-section alumni-speak-section">
-      <div class="student-speak-container">
-        <h2 class="section-title">Alumni Speak</h2>
-        <div class="student-slider-wrapper">
-          <div class="student-slider">
-            <div class="student-video-card" data-video-id="Gz5Vpjt96ZY">
-              <div class="video-thumbnail-wrapper">
-                <img src="https://img.youtube.com/vi/Gz5Vpjt96ZY/hqdefault.jpg" alt="Video Thumbnail">
-                <div class="play-button"></div>
-              </div>
-            </div>
-            <div class="student-video-card" data-video-id="bB6iVfoEBMw">
-              <div class="video-thumbnail-wrapper">
-                <img src="https://img.youtube.com/vi/bB6iVfoEBMw/hqdefault.jpg" alt="Video Thumbnail">
-                <div class="play-button"></div>
-              </div>
-            </div>
-            <div class="student-video-card" data-video-id="qcAkqzskWzI">
-              <div class="video-thumbnail-wrapper">
-                <img src="https://img.youtube.com/vi/qcAkqzskWzI/hqdefault.jpg" alt="Video Thumbnail">
-                <div class="play-button"></div>
-              </div>
-            </div>
-            <div class="student-video-card" data-video-id="xJoXchFct80">
-              <div class="video-thumbnail-wrapper">
-                <img src="https://img.youtube.com/vi/xJoXchFct80/hqdefault.jpg" alt="Video Thumbnail">
-                <div class="play-button"></div>
-              </div>
-            </div>
-          </div>
-          <button class="slider-btn prev-btn">&lt;</button>
-          <button class="slider-btn next-btn">&gt;</button>
-        </div>
-        <div class="slider-indicators">
-          <!-- Indicators will be injected here by JavaScript -->
-        </div>
-      </div>
-    </section>
-
-    <!-- Video Modal -->
-    <div id="video-modal" class="video-modal">
-      <div class="video-modal-content">
-        <span class="close-modal-btn">&times;</span>
-        <iframe id="youtube-video-iframe" width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-    </div>
 
     <!-- Internal Immersions -->
     <!-- <section class="immersions-section">
