Add Fixed Apply Now Button with Smooth Scroll Functionality in index.html, script.js, and style.css. Implement show/hide behavior on scroll for improved user engagement and navigation experience.

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <!-- Hero Banner Section -->
-    <section class="hero-section">
+    <section class="hero-section" id="hero-banner">
       <picture>
         <source media="(min-width: 768px)" srcset="images/lbsim-banner.webp" />
         <source
@@ -805,6 +805,9 @@
         </div>
       </div>
     </section>
+
+    <!-- Fixed Apply Now Button -->
+    <a href="#hero-banner" class="fixed-apply-btn"><span style="font-size: 20px;">🎓</span> Apply Now</a>
 
     <!-- Internal Immersions -->
     <!-- <section class="immersions-section">
