Add new images for icons and update index.html and style.css to incorporate these images in the stats section and the fixed apply button, enhancing visual appeal and user experience.

--- a/index.html
+++ b/index.html
@@ -259,7 +259,13 @@
               />
               <div class="green-border"></div>
               <div class="overlay-card">
-                <div class="card-icon">📖</div>
+                <div class="card-icon">
+                  <img
+                    style="width: 50px; height: 50px"
+                    src="/book.png"
+                    alt="30 Years of Legacy"
+                  />
+                </div>
                 <h3 class="card-title">30+ Years of Legacy</h3>
                 <!-- <p class="card-description">
                   Netus amet congue justo luctus auctor erat dapibus nam sodales
@@ -342,28 +348,52 @@
       <div class="stats-banner">
         <div class="stats-container container">
           <div class="stat-item">
-            <div class="stat-icon">🏆</div>
+            <div class="stat-icon">
+              <img
+                style="height: 40px"
+                src="/trophy.png"
+                alt="Highest Salary"
+              />
+            </div>
             <div class="stat-content">
               <p class="stat-number">20.00 LPA</p>
               <p class="stat-text">Highest Salary</p>
             </div>
           </div>
           <div class="stat-item">
-            <div class="stat-icon">💵</div>
+            <div class="stat-icon">
+              <img
+                style="height: 40px"
+                src="/salary.png"
+                alt="Average Salary"
+              />
+            </div>
             <div class="stat-content">
               <p class="stat-number">12.25 LPA</p>
               <p class="stat-text">Average Salary</p>
             </div>
           </div>
           <div class="stat-item">
-            <div class="stat-icon">🏢</div>
+            <div class="stat-icon">
+              <img
+                style="height: 40px"
+                src="/office-building.png"
+                alt="Total Recruiters"
+              />
+            </div>
             <div class="stat-content">
               <p class="stat-number">148</p>
               <p class="stat-text">Total Recruiters</p>
             </div>
           </div>
           <div class="stat-item">
-            <div class="stat-icon">💼</div>
+            <div class="stat-icon">
+              <img
+                style="height: 40px"
+                src="/portfolio.png"
+                alt="Number of PPOs"
+              />
+            </div>
             <div class="stat-content">
               <p class="stat-number">40</p>
               <p class="stat-text">Number of PPOs</p>
@@ -807,7 +837,12 @@
     </section>
 
     <!-- Fixed Apply Now Button -->
-    <a href="#hero-banner" class="fixed-apply-btn"><span style="font-size: 20px;">🎓</span> Apply Now</a>
+    <a href="#hero-banner" class="fixed-apply-btn"
+      ><span style="display: flex; align-items: center; justify-content: center"
+        ><img style="height: 20px" src="/graduation-hat.png" alt="Apply Now"
+      /></span>
+      Apply Now</a
+    >
 
     <!-- Internal Immersions -->
     <!-- <section class="immersions-section">
