--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <source media="(min-width: 768px)" srcset="images/lbsim-banner.webp" />
         <source
           media="(max-width: 767px)"
-          srcset="images/lbsim-banner-sm1.webp"
+          srcset="images/lbsim-banner-sm1.png"
         />
         <img
           src="images/lbsim-banner.webp"
