--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           srcset="images/lbsim-banner-sm1.png"
         />
         <img
-          src="images/lbsim-banner.webp"
+          src="images/lbsim-banner.png"
           alt="LBSIM Banner"
           class="banner-img"
         />
