Update lbsim-banner image reference in index.html to use new lbsim-hero-banner.png; add the new image file for improved visual consistency.

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           srcset="images/lbsim-banner-sm1.png"
         />
         <img
-          src="/images/lbsim-banner.png"
+          src="images/lbsim-hero-banner.png"
           alt="LBSIM Banner"
           class="banner-img"
         />
