Update hero banner image reference in index.html to use lbsim-hero-banner.png for enhanced visual consistency.

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <!-- Hero Banner Section -->
     <section class="hero-section" id="hero-banner">
       <picture>
-        <source media="(min-width: 768px)" srcset="images/lbsim-banner.webp" />
+        <source media="(min-width: 768px)" srcset="images/lbsim-hero-banner.png" />
         <source
           media="(max-width: 767px)"
           srcset="images/lbsim-banner-sm1.png"
